Part2. Vehicle and Store